--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,263 +7,276 @@ import Step from "../components/Step.astro";
 ---
 
 <Layout title="The Dream Tour">
-  <main class="relative">
-    <!-- HEADER -->
-    <section class="">
-      <div
-        class="bg-gray-50 px-6 py-12 text-center text-gray-800 md:px-12 lg:text-right"
-      >
-        <div class="container mx-auto xl:px-32">
-          <div class="grid items-center gap-12 lg:grid-cols-2">
-            <div class="mt-12 lg:mt-0">
-              <h1
-                class="mb-6 font-heebo text-5xl tracking-tight md:text-6xl xl:text-7xl"
-              >
-                מתכננים לכם <br /><span class="font-bold text-primary"
-                  >את טיול החלומות</span
-                >
-              </h1>
-              <div
-                class="mb-6 w-full space-x-2 space-y-3 space-x-reverse text-[3em]"
-              >
-                <a href="https://www.facebook.com/" role="button">
-                  <!-- Facebook -->
-                  <i class="fa-brands fa-facebook text-blue-500"></i>
-                </a>
-                <a
-                  href="mailto:LeTourDeReve@gmail.com"
-                  class="w-fit"
-                  role="button"
-                >
-                  <!-- gmail -->
-                  <img src="/daniela/gmail.svg" class="inline-block" />
-                </a>
-              </div>
-              <a
-                class="inline-block rounded bg-primary px-7 py-3 text-base font-semibold uppercase leading-snug text-white shadow-md transition duration-150 ease-in-out hover:bg-dark_primary hover:shadow-lg focus:ring-0 active:bg-green-800 active:shadow-lg"
-                href="#contact  "
-                role="button">צור קשר</a
-              >
-            </div>
-            <div class="mb-12 lg:mb-0">
-              <img
-                src="/daniela/intro.jpg"
-                class="w-full rounded-lg shadow-lg"
-                alt=""
-              />
-            </div>
-          </div>
-        </div>
-        <div class="mt-12 flex flex-col items-center">
-          <div class="animate-[bounce_1s_linear_infinite]">
-            <div class="animate-pulse">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="50"
-                height="50"
-                fill="currentColor"
-                class=""
-                viewBox="0 0 16 16"
-              >
-                <path
-                  fill-rule="evenodd"
-                  d="M1.553 6.776a.5.5 0 0 1 .67-.223L8 9.44l5.776-2.888a.5.5 0 1 1 .448.894l-6 3a.5.5 0 0 1-.448 0l-6-3a.5.5 0 0 1-.223-.67z"
-                ></path>
-              </svg>
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="50"
-                height="50"
-                fill="currentColor"
-                class="-mt-8"
-                viewBox="0 0 16 16"
-              >
-                <path
-                  fill-rule="evenodd"
-                  d="M1.553 6.776a.5.5 0 0 1 .67-.223L8 9.44l5.776-2.888a.5.5 0 1 1 .448.894l-6 3a.5.5 0 0 1-.448 0l-6-3a.5.5 0 0 1-.223-.67z"
-                ></path>
-              </svg>
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="50"
-                height="50"
-                fill="currentColor"
-                class="-mt-8"
-                viewBox="0 0 16 16"
-              >
-                <path
-                  fill-rule="evenodd"
-                  d="M1.553 6.776a.5.5 0 0 1 .67-.223L8 9.44l5.776-2.888a.5.5 0 1 1 .448.894l-6 3a.5.5 0 0 1-.448 0l-6-3a.5.5 0 0 1-.223-.67z"
-                ></path>
-              </svg>
-            </div>
-          </div>
+	<main class="relative">
+		<!-- HEADER -->
+		<section class="">
+			<div
+				class="bg-gray-50 px-6 py-12 text-center text-gray-800 md:px-12 lg:text-right"
+			>
+				<div class="container mx-auto xl:px-32">
+					<div class="grid items-center gap-12 lg:grid-cols-2">
+						<div class="mt-12 lg:mt-0">
+							<h1
+								class="mb-6 font-heebo text-5xl tracking-tight md:text-6xl xl:text-7xl"
+							>
+								מתכננים לכם <br /><span
+									class="font-bold text-primary"
+									>את טיול החלומות</span
+								>
+							</h1>
 
-          <span class="font-varela font-bold">קרא עוד</span>
-        </div>
-      </div>
-    </section>
-    <!--  -->
+							<a
+								class="inline-block rounded bg-primary px-7 py-3 text-base font-semibold uppercase leading-snug text-white shadow-md transition duration-150 ease-in-out hover:bg-dark_primary hover:shadow-lg focus:ring-0 active:bg-green-800 active:shadow-lg"
+								href="#contact  "
+								role="button">צור קשר</a
+							>
+						</div>
+						<div class="mb-12 lg:mb-0">
+							<img
+								src="/daniela/intro.jpg"
+								class="w-full rounded-lg shadow-lg"
+								alt=""
+							/>
+						</div>
+					</div>
+				</div>
+				<div class="mt-12 flex flex-col items-center">
+					<div class="animate-[bounce_1s_linear_infinite]">
+						<div class="animate-pulse">
+							<svg
+								xmlns="http://www.w3.org/2000/svg"
+								width="50"
+								height="50"
+								fill="currentColor"
+								class=""
+								viewBox="0 0 16 16"
+							>
+								<path
+									fill-rule="evenodd"
+									d="M1.553 6.776a.5.5 0 0 1 .67-.223L8 9.44l5.776-2.888a.5.5 0 1 1 .448.894l-6 3a.5.5 0 0 1-.448 0l-6-3a.5.5 0 0 1-.223-.67z"
+								></path>
+							</svg>
+							<svg
+								xmlns="http://www.w3.org/2000/svg"
+								width="50"
+								height="50"
+								fill="currentColor"
+								class="-mt-8"
+								viewBox="0 0 16 16"
+							>
+								<path
+									fill-rule="evenodd"
+									d="M1.553 6.776a.5.5 0 0 1 .67-.223L8 9.44l5.776-2.888a.5.5 0 1 1 .448.894l-6 3a.5.5 0 0 1-.448 0l-6-3a.5.5 0 0 1-.223-.67z"
+								></path>
+							</svg>
+							<svg
+								xmlns="http://www.w3.org/2000/svg"
+								width="50"
+								height="50"
+								fill="currentColor"
+								class="-mt-8"
+								viewBox="0 0 16 16"
+							>
+								<path
+									fill-rule="evenodd"
+									d="M1.553 6.776a.5.5 0 0 1 .67-.223L8 9.44l5.776-2.888a.5.5 0 1 1 .448.894l-6 3a.5.5 0 0 1-.448 0l-6-3a.5.5 0 0 1-.223-.67z"
+								></path>
+							</svg>
+						</div>
+					</div>
 
-    <!-- ABOUT -->
-    <section class="bg-white" data-aos="fade-up">
-      <div
-        class="mx-auto max-w-screen-2xl items-center gap-16 px-4 py-8 lg:grid lg:grid-cols-2 lg:px-6 lg:py-16"
-      >
-        <div class="font-light text-gray-500 dark:text-gray-400 sm:text-lg">
-          <h2
-            class="mb-4 text-4xl font-extrabold tracking-tight text-gray-900 dark:text-white"
-          >
-            שמי דניאלה אלקבץ
-          </h2>
-          <div
-            class="mx-auto max-w-5xl space-y-3 text-base sm:text-lg md:text-xl"
-          >
-            <p>
-              על טיולים כל הילדות חלמתי, שמעתי את הסיפורים של אבא על ארצות
-              רחוקות, איך הפליג בין אוקיינוסים, איך עבר בין מדינה אחת לאחרת
-              באירופה, איך ישן ברכבות לילה וחצה יבשות, איך חקר תרבויות והכיר
-              חברים (בעיקר חברות)
-              <br />
-              בדמיוני ראיתי את הדמויות שפגש, את הנופים הבתוליים ואת החוויות המסעירות
-            </p>
-            <p>
-              אבא שלי טייל בעולם אחר, תמים וכמעט חינמי. במותו השאיר אחריו 3
-              פספורטים חתומים מלאים – לא מזמן קיבלתי את החותמת של המדינה ה-47 בה
-              ביקרתי והעולם עוד קורא לי...
-              <br />
+					<span class="font-varela font-bold">קרא עוד</span>
+				</div>
+			</div>
+		</section>
+		<!--  -->
 
-              במשך שנים רבות העדפתי לצבור חוויות מאשר כסף ותארים, אמרתי לעצמי:
-              רגע, חיים רק פעם אחת לא? אז בואי נעשה שיהיה כיף, ועשיתי. עבדתי קשה
-              כדי להרוויח מהר ונשבעתי שלא אחיה חיים שגרתיים. מה עדיף? תואר או
-              טרק בלתי נשכח? עבודה יציבה או לעבוד בסוכנות נסיעות ישראלית
-              בבנגקוק? מערכת יחסים או דילוג בין מדינות? האפשרויות השניות הן
-              שנראו לי המתאימות
-            </p>
-            <p>
-              אז כן, בזמן שכולם חרשו למבחנים אני הקפתי את כדור הארץ מספר פעמים,
-              (לפי ציר הזמן של גוגל) ב-2013,2015,2016 והפעם האחרונה ב-2019.
-              אחרים התחתנו והספיקו להתגרש בזמן שאני ביקרתי בהודו ובנגלדש. אז
-              חוויות נצברו ולאט לאט הרגשתי שהבורגנות קורצת לי, הנה היא תפסה גם
-              אותי, וחייבה אותי להתקרקע: בית, עבודה, מבחנים, תארים, בירוקרטיה
-              וטלפון מהבנק לפעמים כי אלה החיים. על החוויות לא
-            </p>
-          </div>
-          <a
-            data-ripple-light="true"
-            href="#contact"
-            class="order-4 mx-auto mt-3 block w-fit rounded-md bg-primary px-5 py-3 tracking-wider text-text_color transition-all hover:scale-105"
-          >
-            קבע שיחת הכרות
-          </a>
-        </div>
-        <div class="mt-8 grid grid-cols-2 gap-4">
-          <img class="w-full rounded-lg" src="/daniela/us1.png" alt="" />
-          <img
-            class="mt-4 w-full rounded-lg lg:mt-10"
-            src="/daniela/us2.png"
-            alt=""
-          />
-        </div>
-      </div>
-    </section>
-    <!--  -->
+		<!-- ABOUT -->
+		<section class="bg-white" data-aos="fade-up">
+			<div
+				class="mx-auto max-w-screen-2xl items-center gap-16 px-4 py-8 lg:grid lg:grid-cols-2 lg:px-6 lg:py-16"
+			>
+				<div
+					class="font-light text-gray-500 dark:text-gray-400 sm:text-lg"
+				>
+					<h2
+						class="mb-4 text-4xl font-extrabold tracking-tight text-gray-900 dark:text-white"
+					>
+						שמי דניאלה אלקבץ
+					</h2>
+					<div
+						class="mx-auto max-w-5xl space-y-3 text-base sm:text-lg md:text-xl"
+					>
+						<p>
+							על טיולים כל הילדות חלמתי, שמעתי את הסיפורים של אבא
+							על ארצות רחוקות, איך הפליג בין אוקיינוסים, איך עבר
+							בין מדינה אחת לאחרת באירופה, איך ישן ברכבות לילה
+							וחצה יבשות, איך חקר תרבויות והכיר חברים (בעיקר
+							חברות)
+							<br />
+							בדמיוני ראיתי את הדמויות שפגש, את הנופים הבתוליים ואת
+							החוויות המסעירות.
+							<br />
+							אבא שלי טייל בעולם אחר, תמים וכמעט חינמי. במותו השאיר
+							אחריו 3 פספורטים חתומים מלאים – לא מזמן קיבלתי את החותמת
+							של המדינה ה-47 בה ביקרתי והעולם עוד קורא לי...
+							<br />
+							במשך שנים רבות העדפתי לצבור חוויות מאשר כסף ותארים, אמרתי
+							לעצמי: רגע, חיים רק פעם אחת לא? אז בואי נעשה שיהיה כיף,
+							ועשיתי. עבדתי קשה כדי להרוויח מהר ונשבעתי שלא אחיה חיים
+							שגרתיים.
+							<br />
+							מה עדיף? תואר או טרק בלתי נשכח? עבודה יציבה או לעבוד
+							בסוכנות נסיעות ישראלית בבנגקוק? מערכת יחסים או דילוג
+							בין מדינות? האפשרויות השניות הן שנראו לי המתאימות. אז
+							כן, בזמן שכולם חרשו למבחנים אני הקפתי את כדור הארץ מספר
+							פעמים, אחרים התחתנו והספיקו להתגרש בזמן שאני ביקרתי בהודו
+							ובנגלדש. אז חוויות נצברו ולאט לאט הרגשתי שהבורגנות קורצת
+							לי, הנה היא תפסה גם אותי, וחייבה אותי להתקרקע: בית, עבודה,
+							מבחנים, תארים, בירוקרטיה וטלפון מהבנק לפעמים כי אלה החיים.
+							על החוויות לא ויתרתי אבל הקצבתי להם זמנים מיוחדים, וגם
+							היום אני זוכה להעביר אותן הלאה.
+						</p>
+					</div>
+					<a
+						data-ripple-light="true"
+						href="#contact"
+						class="order-4 mx-auto mt-3 block w-fit rounded-md bg-primary px-5 py-3 tracking-wider text-text_color transition-all hover:scale-105"
+					>
+						קבע שיחת הכרות
+					</a>
+				</div>
+				<div class="mt-8 grid grid-cols-2 gap-4">
+					<img
+						class="w-full rounded-lg"
+						src="/daniela/us1.png"
+						alt=""
+					/>
+					<img
+						class="mt-4 w-full rounded-lg lg:mt-10"
+						src="/daniela/us2.png"
+						alt=""
+					/>
+				</div>
+			</div>
+		</section>
+		<!--  -->
 
-    <Devider />
+		<Devider />
 
-    <section class="bg-white" data-aos="fade">
-      <div
-        class="mx-auto max-w-screen-xl items-center gap-16 px-4 py-8 lg:grid lg:grid-cols-2 lg:px-6 lg:py-16"
-      >
-        <div class="font-varela font-light text-gray-500 sm:text-lg">
-          <h2
-            class="mb-4 font-heebo text-4xl font-extrabold tracking-tight text-gray-900"
-          >
-            תכנון חופשה הוא אחד הדברים הכי מרגשים שאפשר לעשות!
-          </h2>
-          <p class="mb-4">
-            אבל זה גם יכול לקחת הרבה זמן ולהיות תהליך מבלבל ומורט עצבים. מתוך
-            הניסיון שלי אני יכולה להציע לכם חווית תכנון חופשה קלה וללא מתח, לכם
-            כל מה שנותר הוא לבדוק אם הדרכון בתוקף ולארוז מזוודה (לבד...)
-          </p>
-        </div>
-        <div class="mt-8 grid grid-cols-2 gap-4">
-          <img
-            class="animate__bounce w-full rounded-lg"
-            data-wow-duration="5s"
-            src="https://images.unsplash.com/photo-1516738901171-8eb4fc13bd20?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80&ar=9:12"
-            alt="office content 1"
-          />
-          <img
-            class="mt-4 w-full rounded-lg lg:mt-10"
-            src="https://images.unsplash.com/photo-1571249692357-fd1418f95042?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=765&q=80&ar=9:12"
-            alt="office content 2"
-          />
-        </div>
-      </div>
-    </section>
+		<section class="bg-white" data-aos="fade">
+			<div
+				class="mx-auto max-w-screen-xl items-center gap-16 px-4 py-8 lg:grid lg:grid-cols-2 lg:px-6 lg:py-16"
+			>
+				<div class="font-varela font-light text-gray-500 sm:text-lg">
+					<h2
+						class="mb-4 font-heebo text-4xl font-extrabold tracking-tight text-gray-900"
+					>
+						תכנון חופשה הוא אחד הדברים הכי מרגשים שאפשר לעשות!
+					</h2>
+					<p class="mb-4">
+						אבל זה גם יכול לקחת הרבה זמן ולהיות תהליך מבלבל ומורט
+						עצבים. מתוך הניסיון שלי אני יכולה להציע לכם חווית תכנון
+						חופשה קלה וללא מתח, לכם כל מה שנותר הוא לבדוק אם הדרכון
+						בתוקף ולארוז מזוודה (לבד...)
+					</p>
+				</div>
+				<div class="mt-8 grid grid-cols-2 gap-4">
+					<img
+						class="animate__bounce w-full rounded-lg"
+						data-wow-duration="5s"
+						src="https://images.unsplash.com/photo-1516738901171-8eb4fc13bd20?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2070&q=80&ar=9:12"
+						alt="office content 1"
+					/>
+					<img
+						class="mt-4 w-full rounded-lg lg:mt-10"
+						src="https://images.unsplash.com/photo-1571249692357-fd1418f95042?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=765&q=80&ar=9:12"
+						alt="office content 2"
+					/>
+				</div>
+			</div>
+		</section>
 
-    <Devider />
+		<Devider />
 
-    <!-- TESTIMONIALS -->
-    <script
-      src="https://static.elfsight.com/platform/platform.js"
-      data-use-service-core
-      defer
-    ></script>
-    <!--  -->
+		<!-- TESTIMONIALS -->
+		<script
+			src="https://static.elfsight.com/platform/platform.js"
+			data-use-service-core
+			defer
+		></script>
+		<!--  -->
 
-    <div
-      class="elfsight-app-95a740b8-31bf-4603-9a07-65d7727d05fa"
-      data-aos="fade-up"
-    >
-    </div>
-    <!--  -->
-    <Devider />
-    <!-- SERVICES -->
-    <Features />
-    <!--  -->
-    <Devider />
+		<div
+			class="elfsight-app-95a740b8-31bf-4603-9a07-65d7727d05fa"
+			data-aos="fade-up"
+		>
+		</div>
+		<!--  -->
+		<Devider />
+		<!-- SERVICES -->
+		<Features />
+		<!--  -->
+		<Devider />
 
-    <!-- PROCESS -->
-    <section class="overflow-x-hidden bg-home">
-      <div class="mx-auto flex max-w-screen-2xl flex-col p-6">
-        <h2 class="mt-4 text-center font-heebo text-6xl font-bold xl:text-8xl">
-          איך יוצאים לטיול מהחלומות?
-        </h2>
-        <ol
-          class="relative mx-auto mt-16 max-w-screen-lg border-r border-gray-500"
-        >
-          <Step icon="fas fa-phone" title="פגישת היכרות בזום" fadeDir="right">
-            נאפיין את הצרכים האישיים ונכיר את ההעדפות הטיול שלכם
-          </Step>
-          <Step icon="fas fa-map-signs" title="תכנון הטיול" fadeDir="left">
-            אחרי שאבין את העדיפויות שלכם, אני אתחיל את החיפוש שלי כדי לתכנן לכם
-            את הטיול. אני אחפש מקומות לינה, טיסות, פעילויות, ואטרקציות שמתאימים
-            לעדיפות והתקציב שלכם. המטרה שלי היא ליצור מסלול שכולל את כל המקומות
-            שבהם תרצו לבקר ושמתאים לציר הזמן שלכם.
-          </Step>
-          <Step icon="fas fa-tv" title="הצגת הטיול" fadeDir="right">
-            לאחר שאסיים את תכנית הטיול, אציג אותה בפניכם לבדיקתכם. נדבר על כל
-            שינוי שתרצו לבצע, כמו התאמת מסלול הטיול, החלפת מלונות או החלפת
-            פעילויות. נעבור מספר תיקונים עד שתהיו מרוצים לחלוטין מהטיול.
-          </Step>
-          <Step icon="fas fa-map" title="תיק נסיעות" fadeDir="left">
-            מקבלים עד הבית את תיק הנסיעות המודפס שלכם שכולל פירוט של כל יום
-            במסלול, מפות, כל הכרטיסים, מידע חשוב וכו', ובנוסף תקבלו גם עותק
-            דיגיטלי הכולל לינקים למפות גוגל / וויז, כרטיסים אלקטרוניים וכל טיפ
-            חשוב שיכול לעזור לכם בדרך
-          </Step>
-          <Step icon="far  fa-laugh-beam" title="תמיכה רציפה" fadeDir="right">
-            לבסוף, אני אהיה זמינה עבורכם לאורך כל הטיול למקרה שיש לכם שאלות או
-            חששות. אני אהיה שם כדי לספק סיוע והכוונה בכל פעם שתזדקקו לכך, כדי
-            להבטיח שהטיול שלכם יעבור בצורה חלקה ככל האפשר.
-          </Step>
-        </ol>
-      </div>
-    </section>
+		<!-- PROCESS -->
+		<section class="overflow-x-hidden bg-home">
+			<div class="mx-auto flex max-w-screen-2xl flex-col p-6">
+				<h2
+					class="mt-4 text-center font-heebo text-6xl font-bold xl:text-8xl"
+				>
+					איך יוצאים לטיול מהחלומות?
+				</h2>
+				<ol
+					class="relative mx-auto mt-16 max-w-screen-lg border-r border-gray-500"
+				>
+					<Step
+						icon="fas fa-phone"
+						title="פגישת היכרות בזום"
+						fadeDir="right"
+					>
+						נבין מי נוסע ולאן ? נאפיין את הצרכים האישיים ונכיר את
+						העדפות הטיול שלכם, האם אתם אנשי טבע או אנשי עיר? חובבי
+						מוזיאונים או פארקים לאומיים
+					</Step>
+					<Step
+						icon="fas fa-map-signs"
+						title="תכנון הטיול"
+						fadeDir="left"
+					>
+						אחרי שאבין את העדיפויות שלכם, אני אתחיל את החיפוש שלי
+						כדי לתכנן לכם את הטיול. אני אחפש מקומות לינה, טיסות,
+						פעילויות, ואטרקציות שמתאימים לעדיפות והתקציב שלכם. המטרה
+						שלי היא ליצור מסלול שכולל את כל המקומות שבהם תרצו לבקר
+						ושמתאים לציר הזמן שלכם.
+					</Step>
+					<Step icon="fas fa-tv" title="הצגת הטיול" fadeDir="right">
+						לאחר שאסיים את תכנית הטיול, אציג אותה בפניכם לבדיקתכם.
+						נדבר על כל שינוי שתרצו לבצע, כמו התאמת מסלול הטיול,
+						החלפת מלונות או החלפת פעילויות. נעבור מספר תיקונים עד
+						שתהיו מרוצים לחלוטין מהטיול.
+					</Step>
+					<Step icon="fas fa-map" title="תיק נסיעות" fadeDir="left">
+						מקבלים עד הבית את תיק הנסיעות המודפס שלכם שכולל פירוט של
+						כל יום במסלול, מפות, כל הכרטיסים, מידע חשוב וכו', ובנוסף
+						תקבלו גם עותק דיגיטלי הכולל לינקים למפות גוגל / וויז,
+						כרטיסים אלקטרוניים וכל טיפ חשוב שיכול לעזור לכם בדרך
+					</Step>
+					<Step
+						icon="far  fa-laugh-beam"
+						title="תמיכה רציפה"
+						fadeDir="right"
+					>
+						לבסוף, אני אהיה זמינה עבורכם לאורך כל הטיול למקרה שיש
+						לכם שאלות או חששות. אני אהיה שם כדי לספק סיוע והכוונה
+						בכל פעם שתזדקקו לכך, כדי להבטיח שהטיול שלכם יעבור בצורה
+						חלקה ככל האפשר.
+					</Step>
+				</ol>
+			</div>
+		</section>
 
-    <Devider />
-  </main>
-  <!--  -->
+		<Devider />
+	</main>
+	<!--  -->
 </Layout>
