--- a/src/components/Features.astro
+++ b/src/components/Features.astro
@@ -34,7 +34,7 @@ const services = [
     <!-- Heading start -->
     <header class="mx-auto mb-12 text-center lg:px-20">
       <h2 class="mb-2 text-5xl lg:text-7xl font-bold font-heebo leading-normal text-black">
-        כל מה שאתם צריכים כדי להבטיח טיול מוצלח
+        אז איך יוצאים לטיול החלומות?
       </h2>
       <svg
         version="1.1"
@@ -69,8 +69,8 @@ const services = [
           style="stroke-width: 2;stroke-miterlimit: 10;"></line>
       </svg>
       <p class="mx-auto pb-2 text-xl font-varela font-light leading-relaxed text-gray-500">
-        מכרטיסי טיסה, ועד ליעדים עוצרי הנשימה, אני מתכננת את הטיול המושלם
-            עבורכם.
+        מכרטיסי טיסה, ועד ליעדים עוצרי נשימה, אני מתכננת את הטיול המושלם
+            עבורכם
       </p>
     </header>
     <!-- End heading -->
