--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -34,7 +34,8 @@
         <p
           class="mx-auto mt-6 max-w-md text-center leading-relaxed text-gray-500 lg:text-right"
         >
-          תעדו את הרגעים השמחים והמרגשים עם צילום מקצועי שכולו מהלב
+          אני אשמח לתכנן לכם מסע של גילויים והרפתקאות, תנו לי להראות לכם את
+          העולם ולתכנן לכם טיול מהחלומות
         </p>
       </div>
 
