did all new updates

--- a/src/components/Features.astro
+++ b/src/components/Features.astro
@@ -1,27 +1,37 @@
 ---
 
 const services = [
+  
   {
-    title : "כרטיסי טיסה",
-    text : "אני אמצא לכם כרטיסי טיסה שמתאימים לכם גם במחיר וגם בתאריכים",
-    icon : "plane"
+    title : "הופעות וארועים",
+    text : "אני אשיג לכם כרטיסים להופעות של האומנים הכי שווים ואירועי הספורט הכי גדולים ואבנה , אפשרות לכרטיסים בודדים או לחבילה משתלמת במיוחד",
+    icon : "music"
   },
   {
-    title : "תכנון יומי",
-    text : " אני מתכננת מה עושים בכל יום בפירוט עם הדרכה כדי שלכם לא יהיה כאב ראש",
-    icon : "calendar"
-  },
-  {
-    title :"מותאם אישית",
-    text : "הטיולים שאני מתכננת הם מותאמים אישית למה שאתם מחפשים בטיול החלומות שלכם",
+    title: "בניית מסלול טיול בהתאמה אישית",
+    text: "שומרים על התקציב ונהנים בלי דאגות",
     icon : "map-marked-alt"
   },
   {
-    title : "הופעות וארועים",
-    text : "אני גם מציעה חיפוש וקביעת מקומות להופעות, גם בנפרד מתכנון הטיול המלא",
-    icon : "music"
+    title : " הזמנה מראש",
+    text : "הזמנה מראש של כרטיסי הטיסה, מקומות הלינה, אמצעי התחבורה, אטרקציות ובילויים = חיסכון זמן וכסף",
+    icon:"plane"
+  },
+  {
+    title: "מקבלים מידע מפורט על מדינת היעד",
+    text: "אקלים, תנאי הכבישים ,התרבות המקומית, רגולציות למיניהן (ויש לא מעט...) ",
+    icon:"info"
+  },
+  {
+    title :"פתרון תקלות בזמן אמת",
+    text:"שירות לקוחות 24/6 (שומרת שבת בכיף)",
+    icon:"phone"
+  },
+  {
+    title :"מחיר מראש",
+    text:"והכי הכי חשוב, אתם תדעו כמה הכול יעלה לכם לפני היציאה מהארץ (כולל דיוטי פרי),",
+    icon:"dollar-sign"
   }
-
   
 ];
 ---
