--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -27,7 +27,15 @@
       <div>
         <div class="flex justify-center text-gray-800 lg:justify-start">
           <a href="#" class="flex items-center">
-            <img src="logo.png" alt="" class="w-96" />
+            <img
+              src="/daniela/logo.png"
+              class="my-auto ml-3 h-16 w-16 object-cover sm:h-20 sm:w-20"
+              alt=""
+            />
+            <span
+              class="self-center whitespace-nowrap font-heebo text-3xl font-black uppercase md:text-5xl"
+              >The Dream Tour</span
+            >
           </a>
         </div>
 
