--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -2,20 +2,9 @@
   class="sticky left-0 top-0 z-20 w-full bg-home px-2 py-2.5 text-black shadow-xl sm:px-4"
 >
   <div class="container mx-auto flex flex-wrap items-center justify-between">
-    <a href="#" class="flex items-center">
-      <img
-        src="/daniela/logo.png"
-        class="my-auto ml-3 h-8 w-8 object-cover sm:h-10 sm:w-10"
-        alt=""
-      />
-      <span
-        class="self-center whitespace-nowrap font-heebo text-2xl font-black uppercase md:text-4xl"
-        >The Dream Tour</span
-      >
-    </a>
-    <div class="flex gap-2 md:order-2">
+    <div class="flex gap-2">
       <a
-        class="inline-block rounded bg-primary px-8 py-3 text-sm font-medium text-white transition hover:scale-105 hover:shadow-xl focus:outline-none focus:ring active:bg-indigo-500"
+        class="hidden rounded bg-primary px-8 py-3 text-sm font-medium text-white transition hover:scale-105 hover:shadow-xl focus:outline-none focus:ring active:bg-indigo-500 md:inline-block"
         href="#contact"
       >
         צור קשר
@@ -42,7 +31,7 @@
       </button>
     </div>
     <div
-      class="hidden w-full items-center justify-between md:order-1 md:flex md:w-auto"
+      class="hidden w-full items-center justify-between md:flex md:w-auto"
       id="navbar-sticky"
     >
       <ul
@@ -79,5 +68,16 @@
         </li>
       </ul>
     </div>
+    <a href="#" class="flex items-center">
+      <img
+        src="/daniela/logo.png"
+        class="my-auto ml-3 h-8 w-8 object-cover sm:h-10 sm:w-10"
+        alt=""
+      />
+      <span
+        class="self-center whitespace-nowrap font-heebo text-2xl font-black uppercase md:text-4xl"
+        >The Dream Tour</span
+      >
+    </a>
   </div>
 </nav>
