--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -196,6 +196,7 @@ import Step from "../components/Step.astro";
 
     <div
       class="elfsight-app-95a740b8-31bf-4603-9a07-65d7727d05fa"
+      style="overflow-x:hidden"
       data-aos="fade-up"
     >
     </div>
