updated SRC for domain

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -28,7 +28,7 @@
         <div class="flex justify-center text-gray-800 lg:justify-start">
           <a href="#" class="flex items-center">
             <img
-              src="/daniela/logo.png"
+              src="/logo.png"
               class="my-auto ml-3 h-16 w-16 object-cover sm:h-20 sm:w-20"
               alt=""
             />
@@ -52,10 +52,7 @@
           class="flex flex-wrap justify-center gap-6 md:gap-8 lg:justify-end lg:gap-12"
         >
           <li>
-            <a
-              class="text-gray-700 transition hover:text-gray-700/75"
-              href="/daniela"
-            >
+            <a class="text-gray-700 transition hover:text-gray-700/75" href="">
               בית
             </a>
           </li>
@@ -63,7 +60,7 @@
           <li>
             <a
               class="text-gray-700 transition hover:text-gray-700/75"
-              href="/daniela/gallary"
+              href="/gallary"
             >
               גלריה
             </a>
@@ -72,7 +69,7 @@
           <li>
             <a
               class="text-gray-700 transition hover:text-gray-700/75"
-              href="/daniela/tours"
+              href="/tours"
             >
               טיולים
             </a>
