--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -39,7 +39,7 @@
       >
         <li>
           <a
-            href="/daniela/"
+            href="/"
             class="block rounded py-2 pl-3 pr-4 transition-all duration-100 hover:bg-gray-100 hover:bg-opacity-20 md:p-0 md:hover:bg-transparent md:hover:text-gray-300"
             aria-current="page">בית</a
           >
@@ -47,14 +47,14 @@
 
         <li>
           <a
-            href="/daniela/gallery"
+            href="/gallery"
             class="block rounded py-2 pl-3 pr-4 transition-all duration-100 hover:bg-gray-100 hover:bg-opacity-20 md:p-0 md:hover:bg-transparent md:hover:text-gray-300"
             >גלריה</a
           >
         </li>
         <li>
           <a
-            href="/daniela/tours"
+            href="/tours"
             class="block rounded py-2 pl-3 pr-4 transition-all duration-100 hover:bg-gray-100 hover:bg-opacity-20 md:p-0 md:hover:bg-transparent md:hover:text-gray-300"
             >טיולים</a
           >
@@ -70,7 +70,7 @@
     </div>
     <a href="#" class="flex items-center">
       <img
-        src="/daniela/logo.png"
+        src="/logo.png"
         class="my-auto ml-3 h-8 w-8 object-cover sm:h-10 sm:w-10"
         alt=""
       />
