--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -32,7 +32,7 @@ import Step from "../components/Step.astro";
             </div>
             <div class="mb-12 lg:mb-0">
               <img
-                src="/daniela/intro.jpg"
+                src="/intro.jpg"
                 class="w-full rounded-lg shadow-lg"
                 alt=""
               />
@@ -139,12 +139,8 @@ import Step from "../components/Step.astro";
           </a>
         </div>
         <div class="mt-8 grid grid-cols-2 gap-4">
-          <img class="w-full rounded-lg" src="/daniela/us1.png" alt="" />
-          <img
-            class="mt-4 w-full rounded-lg lg:mt-10"
-            src="/daniela/us2.png"
-            alt=""
-          />
+          <img class="w-full rounded-lg" src="/us1.png" alt="" />
+          <img class="mt-4 w-full rounded-lg lg:mt-10" src="/us2.png" alt="" />
         </div>
       </div>
     </section>
