--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -6,7 +6,7 @@
   id="contact"
 >
   <h1 class="font-varela text-4xl font-bold md:text-5xl lg:text-6xl">
-    צרו קשר
+    גם אתם רוצים?
   </h1>
   <h3 class="font-vare text-2xl">השאירו פרטים ונחזור אליכם בקרוב</h3>
   <div class="mb-6 w-full space-x-2 space-y-3 space-x-reverse text-[3em]">
