changed a word (update)

--- a/src/components/Features.astro
+++ b/src/components/Features.astro
@@ -4,7 +4,7 @@ const services = [
   
   {
     title : "הופעות וארועים",
-    text : "אני אשיג לכם כרטיסים להופעות של האומנים הכי שווים ואירועי הספורט הכי גדולים ואבנה , אפשרות לכרטיסים בודדים או לחבילה משתלמת במיוחד",
+    text : "אני אשיג לכם כרטיסים להופעות של האומנים הכי שווים ואירועי הספורט הכי גדולים יש אפשרות , אפשרות לכרטיסים בודדים או לחבילה משתלמת במיוחד",
     icon : "music"
   },
   {
