better SEO i guess

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -17,64 +17,72 @@ import Contact from "../components/Contact.astro";
     <meta name="viewport" content="width=device-width" />
     <link rel="icon" type="image" href="" />
     <meta name="generator" content={Astro.generator} />
-    <title>{title}</title>
-    <!-- Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Heebo:wght@100;200;300;400;500;600;700;800;900&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Varela+Round&display=swap"
-      rel="stylesheet"
+    <meta
+      name="description"
+      content="ארגנו את טיול החלומות שלכם עם The Dream Tour"
     />
-    <!-- Flowbite -->
-    <link
-      href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.4/flowbite.min.css"
-      rel="stylesheet"
+    <meta
+      name="keywords"
+      content="The Dream Tour, thedreamtour, טיול, טיול החלומות, ארגון טיולים"
     />
-    <!-- Icons -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-    />
-
-    <!-- AOS -->
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-    <!--  -->
-
     <title>{title}</title>
   </head>
-  <body class="overflow-x-hidden font-sans">
-    <Navbar />
-    <div
-      class="fixed bottom-4 left-4 z-20 flex flex-col items-center gap-y-1 text-[2em] lg:bottom-10 lg:left-10 lg:text-[3em]"
-    >
-      <a
-        href="tel:+972587889949"
-        class="z-20 aspect-square w-fit rounded-full bg-blue-500 text-slate-600 transition-all duration-150 hover:scale-105 hover:shadow-2xl"
-        ><i class="fa-phone fa-solid aspect-square text-white"></i></a
-      >
-      <a
-        href="https://wa.link/3tsqrg"
-        class="z-20 aspect-square w-fit rounded-full bg-green-500 text-slate-600 transition-all duration-150 hover:scale-105 hover:shadow-2xl"
-        ><i class="fa-whatsapp fa-brands aspect-square text-white"></i></a
-      >
-    </div>
-    <slot />
-    <Devider />
-    <Contact />
-    <Footer />
-    <!-- Flowbite -->
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.4/flowbite.min.js"
-    ></script>
+  <!-- Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Heebo:wght@100;200;300;400;500;600;700;800;900&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Varela+Round&display=swap"
+    rel="stylesheet"
+  />
+  <!-- Flowbite -->
+  <link
+    href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.4/flowbite.min.css"
+    rel="stylesheet"
+  />
+  <!-- Icons -->
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+  />
 
-    <!-- Ripple effect -->
-    <script
-      src="https://unpkg.com/@material-tailwind/html@latest/scripts/ripple.js"
-    ></script>
+  <!-- AOS -->
+  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+  <!--  -->
 
-    <script is:inline src="https://unpkg.com/aos@next/dist/aos.js"></script>
-    <script is:inline>
-      AOS.init({ delay: 400, duration: 1000, once: false });
-    </script>
-  </body>
+  <title>{title}</title>
 </html>
+<body class="overflow-x-hidden font-sans">
+  <Navbar />
+  <div
+    class="fixed bottom-4 left-4 z-20 flex flex-col items-center gap-y-1 text-[2em] lg:bottom-10 lg:left-10 lg:text-[3em]"
+  >
+    <a
+      href="tel:+972587889949"
+      class="z-20 aspect-square w-fit rounded-full bg-blue-500 text-slate-600 transition-all duration-150 hover:scale-105 hover:shadow-2xl"
+      ><i class="fa-phone fa-solid aspect-square text-white"></i></a
+    >
+    <a
+      href="https://wa.link/3tsqrg"
+      class="z-20 aspect-square w-fit rounded-full bg-green-500 text-slate-600 transition-all duration-150 hover:scale-105 hover:shadow-2xl"
+      ><i class="fa-whatsapp fa-brands aspect-square text-white"></i></a
+    >
+  </div>
+  <slot />
+  <Devider />
+  <Contact />
+  <Footer />
+  <!-- Flowbite -->
+  <script
+    src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.4/flowbite.min.js"
+  ></script>
+
+  <!-- Ripple effect -->
+  <script
+    src="https://unpkg.com/@material-tailwind/html@latest/scripts/ripple.js"
+  ></script>
+
+  <script is:inline src="https://unpkg.com/aos@next/dist/aos.js"></script>
+  <script is:inline>
+    AOS.init({ delay: 400, duration: 1000, once: false });
+  </script>
+</body>
